--- a/frontend/pagina_principal.css
+++ b/frontend/pagina_principal.css
@@ -693,6 +693,10 @@ html{
     z-index: 1000;
     justify-content: center;
     align-items: center;
+    transition: opacity 1s ease, visibility 1s ease;
+    
+
+    
   }
 
   /* Contenedor del modal */
@@ -704,6 +708,7 @@ html{
     overflow: hidden;
     display: flex;
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    transition: opacity 1s ease, visibility 1s ease;
   }
 
   .modal .izquierda {
@@ -715,11 +720,13 @@ html{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: opacity 1s ease, visibility 1s ease;
   }
 
   .modal .derecha {
     flex: 1;
     padding: 40px;
+    transition: opacity 1s ease, visibility 1s ease;
   }
 
   .modal h2 {
