--- a/frontend/pagina_principal.css
+++ b/frontend/pagina_principal.css
@@ -33,7 +33,6 @@ html{
 /* header*/
 .container-hero{
     background-color: var(--background-color);
-
 }
 
 @media (max-width: 768px) {
@@ -42,6 +41,7 @@ html{
       align-items: flex-start;
       padding: 2rem;
       gap: 2rem;
+      position: fixed;
   }
     }
 
@@ -101,6 +101,7 @@ html{
     justify-content: space-between;
     align-items: center;
     padding: 2rem 0;
+    
 }
 
 .custoner-support{
@@ -109,9 +110,12 @@ html{
     gap: 2ren;
 }
 
-.custoner-support i{
+
+.custoner-support .imacon{
     font-size: 3.3rem;
 }
+
+
 
 .content-custoner-support{
     display: flex;
@@ -477,14 +481,33 @@ html{
 }
 
 .mejores-categorias{
-    text-align: center;
-    justify-content: center;
-    font-size: 3.5rem;
+  font-size: 4rem;
+  font-weight: 800;
+  color: #111;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  font-family: 'Poppins', sans-serif;
+}
     
+.mejores-categorias::after{
+  content: '';
+  width: 60%;
+  height: 4px;
+  background-color: var(--dark-color);
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  border-radius: 10px;
+  animation: slideInLine 1s ease forwards;
 }
 
 .mejores{
-    padding: 5rem;
+  text-align: center;
+  margin: 4rem 0;
+  position: relative;
 }
 
 
@@ -505,7 +528,25 @@ html{
     justify-content: center;
     border-radius: 2rem;
     gap: 2rem;
+    animation: fadeInUp 1s ease-in-out;
+  opacity: 0;
+  animation-fill-mode: forwards;
 }
+
+
+.card-category:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+.card-category:nth-child(2) {
+  animation-delay: 0.4s;
+}
+
+.card-category:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+
 
 .category-moca{
     background-image: linear-gradient(#00000080,#00000080), url(imagenes/galaxy_S.jpg);
@@ -583,6 +624,18 @@ html{
     grid-template-columns: 1fr;
   }
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 
 
 /*top-products*/
@@ -821,7 +874,7 @@ html{
   }
 
   .ipad1 {
-    background-image: linear-gradient(#00000080,#00000080), url(imagenes/galaxy_tab_s10.jpg);
+    background-image: linear-gradient(#00000080,#00000080), url(imagenes/Galaxy\ Watch\ 8.webp);
     width: 100%;
     height: auto;
   }
@@ -855,16 +908,46 @@ html{
     max-width: 80%;
   }
 
-  .nuevas-tecnologias{
-    padding: 5rem;
-    justify-content: center;
-  }
-
-  .nuevos{
-    font-size: 3.5rem;
+  .nuevas-tecnologias {
     text-align: center;
+    margin: 4rem 0;
+    position: relative;
   }
-
+  
+  .nuevos {
+    font-size: 4rem;
+    font-weight: 800;
+    color: #111;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  /* Línea decorativa debajo */
+  .nuevos::after {
+    content: '';
+    width: 60%;
+    height: 4px;
+    background-color: var(--dark-color);
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    animation: slideInLine 1s ease forwards;
+  }
+  
+  /* Animación opcional para la línea */
+  @keyframes slideInLine {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 60%;
+    }
+  }
   @media (max-width: 768px) {
     .section .watch,
     .section .ipad {
@@ -1135,13 +1218,33 @@ html{
   /*carrusel*/
 
   .electrodomesticos{
-    padding: 5rem;
-    justify-content: center;
+    text-align: center;
+    margin: 4rem 0;
+    position: relative;
   }
 
   .electro{
-    font-size: 3.5rem;
-    text-align: center;
+    font-size: 4rem;
+    font-weight: 800;
+    color: #111;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .electro::after{
+    content: '';
+  width: 60%;
+  height: 4px;
+  background-color: var(--dark-color);
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  border-radius: 10px;
+  animation: slideInLine 1s ease forwards;
   }
  
   .containercr {
