--- a/frontend/pagina_MOVILES.css
+++ b/frontend/pagina_MOVILES.css
@@ -379,45 +379,56 @@ html{
 
 /*BANER*/
 
-.banner{
-    background-image: linear-gradient(100deg, #000000, #00000020),url(imagenes/banner.jpg);
-    height: 50rem;
-    background-size: cover;
-    background-position: center;
+.banner {
+  position: relative;
+  height: 50rem;
+  overflow: hidden;
 }
 
-.content-banner{
-    max-width: 90rem;
-    margin: 0 auto;
-    padding: 25rem 0;
+.video-banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  filter: brightness(0.4); /* oscurece el video para que resalte el texto */
 }
 
-.content-banner p{
-    color: var(--primary-color);
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
-    font-weight: 500;
+.content-banner {
+  max-width: 90rem;
+  margin: 0 auto;
+  padding: 25rem 0;
+  position: relative;
+  z-index: 1;
 }
 
-.content-banner h2{
-
-    color: white;
-    font-size: 3.5rem;
-    font-weight: 500;
-    line-height: 1.2;
+.content-banner p {
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
 }
 
-.content-banner a{
-    margin-top: 2rem;
-    text-decoration: none;
-    color: white;
-    background-color: var(--primary-color);
-    display: inline-block;
-    padding: 1rem 3rem;
-    text-transform: uppercase;
-    border-radius: 3rem;
-
+.content-banner h2 {
+  color: white;
+  font-size: 3.5rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
+
+.content-banner a {
+  margin-top: 2rem;
+  text-decoration: none;
+  color: white;
+  background-color: var(--primary-color);
+  display: inline-block;
+  padding: 1rem 3rem;
+  text-transform: uppercase;
+  border-radius: 3rem;
+}
+
 
 
 
