--- a/frontend/pagina_MOVILES.css
+++ b/frontend/pagina_MOVILES.css
@@ -455,9 +455,14 @@ html{
     padding: 2rem 3rem;
     border-radius: .5rem;
     cursor: pointer;
-    box-shadow: 0 0 .2rem rgba(0, 0, 0, 0.1);
-}
-
+    transition: transform 0.3s ease; 
+  }
+  
+  .card-product1:hover {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
+  
 .container-img1{
     position: relative;
 }
@@ -605,14 +610,34 @@ html{
 /*ofertas*/
 
 .ofertas{
-    padding: 3rem;
-    justify-content: center;
+  text-align: center;
+  margin: 4rem 0;
+  position: relative;
 
 }
 
 .parrafo-ofertas{
-    text-align: center;
-    font-size: 3.5rem;
+  font-size: 4rem;
+  font-weight: 800;
+  color: #111;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  font-family: 'Poppins', sans-serif;
+}
+
+.parrafo-ofertas::after{
+  content: '';
+  width: 60%;
+  height: 4px;
+  background-color: var(--dark-color);
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  border-radius: 10px;
+  animation: slideInLine 1s ease forwards;
 }
 
 
