--- a/frontend/pagina_TV.css
+++ b/frontend/pagina_TV.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
@@ -18,7 +17,7 @@ html{
     box-sizing: border-box;
 }
 
-/*utilidades*/
+/*utilizes*/
 
 .container{
     max-width: 120rem;
@@ -335,11 +334,38 @@ html{
 }
 
 /* Responsive */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
   }
+
+
+
+
+  @media (max-width: 768px) {
+    /* Estilos para dispositivos móviles (pantallas más pequeñas) */
+    /*.mi-clase {
+        font-size: 14px;
+        width: 100%;
+    }*/
+
+@media (min-width: 769px) {
+    /* Estilos para tabletas (pantallas medianas) */
+    .mi-clase {
+        font-size: 16px;
+        width: 50%;
+    }
+}
+@media (min-width: 1024px) {
+    /* Estilos para computadoras de escritorio (pantallas grandes) */
+    .mi-clase {
+        font-size: 18px;
+        width: 33.33%;
+    }
+}
+
+
 
   #menu-toggle {
     display: block;
@@ -373,7 +399,7 @@ html{
     width: 100%;
     margin-top: 1rem;
   }
-}
+
 
 
 
@@ -1184,16 +1210,3 @@ html{
 
 /*fin del footer*/
 /*fin del footer*/
- 
-
-  
-
-
-
-
-
-
-
-
-
-
