--- a/frontend/pagina_TV.css
+++ b/frontend/pagina_TV.css
@@ -406,6 +406,15 @@ html {
 /*estilo de productos*/
 /*products*/
 
+.samsungpro{
+  color: #000;
+  text-decoration: none;
+}
+
+.samsungpro:hover{
+  color: var(--primary-color);
+}
+
 .productos-venta{
   margin-top: 30px;
   margin-right: 20px;
