--- a/frontend/pagina_accesorios.css
+++ b/frontend/pagina_accesorios.css
@@ -416,6 +416,11 @@ html {
 }
 
 .productos-venta{
+  margin-top: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px; 
+  gap: 2rem;
   gap: 2rem;
 }
 
