--- a/frontend/pagina_electrodomesticos.css
+++ b/frontend/pagina_electrodomesticos.css
@@ -417,10 +417,15 @@ html {
 }
 
 .productos-venta{
+  margin-top: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px; 
   gap: 2rem;
 }
 
 .container-products1 {
+  margin-bottom: 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
     gap: 3rem;
@@ -505,6 +510,10 @@ html {
 }
 
 .content-card-product1{
+  margin-bottom: 20px;
+  margin-top :0px;
+  padding: 10px;
+  margin: 0px;
     display: grid;
     justify-items: center;
     grid-template-columns: 1fr 1fr;
